results/SVCOMP/4-shot/log-ExMIT-2024_03_18_16_38_15.txt
import java.util.Random;

public class ExMIT {
  //@ requires new Random().nextInt() != 1;
  //@ ensures \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires 2 * (i + 1) != 10;
  //@ ensures \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ requires (i + 1) * 2 <= 10;
  //@ ensures \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: Object allocation is not permitted in specification expressions
  //@ requires new Random().nextInt() != 1;
               ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:5: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == 0;
               ^
2 errors

